--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,27 @@
 }
 
 
+.textarea {
+    width: 100%;
+    height: 100px;
+    margin: 20px 0;
+    resize: none;
+    border-radius: 10px;
+    padding: 10px;
+    outline: none;
+    border: 1px solid #3b5998;
+}
+
+.btn {
+    width: 100%;
+    height: 50px;
+    color: #ffffff;
+    font-size: 18px;
+    cursor: pointer;
+    font-weight: bolder;
+    background-color: #3b5998;
+}
+
 
 
 
