--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -1,6 +1,7 @@
 .dialogs {
     display: grid;
     grid-template-columns: 2fr 10fr;
+    grid-gap: 30px;
 }
 
 .dialogsItem {
@@ -35,4 +36,10 @@
     text-decoration: none;
     font-weight: 500;
 }
+
+.textareaBlock {
+    display: flex;
+    flex-direction: column;
+}
+
 
