--- a/src/App.css
+++ b/src/App.css
@@ -36,6 +36,16 @@
     background-color: #3b5998;
 }
 
+.input {
+    width: 100%;
+    height: 40px;
+    outline: none;
+    border: 1px solid gray;
+    border-radius: 10px;
+    padding: 10px;
+    font-size: 16px;
+}
+
 
 
 
