--- a/src/App.css
+++ b/src/App.css
@@ -27,13 +27,17 @@
 }
 
 .btn {
-    width: 100%;
-    height: 50px;
+    width: auto;
+    height: auto;
+    padding: 10px 15px;
     color: #ffffff;
     font-size: 18px;
     cursor: pointer;
     font-weight: bolder;
     background-color: #3b5998;
+    border: none;
+    border-radius: 12px;
+
 }
 
 .input {
