--- a/src/components/common/Preloader/Preloader.module.css
+++ b/src/components/common/Preloader/Preloader.module.css
@@ -1,6 +1,13 @@
+/*.preloader {*/
+/*    position: fixed;*/
+/*    top: 50%;*/
+/*    left: 50%;*/
+/*    transform: translate(-50%, -50%);*/
+/*}*/
+
 .preloader {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
