--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@ body {
     margin: 0;
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
+    background-color: #ebecee;
 }
 
 h1, h2, h3, h4, h5, h6 {
