--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -56,6 +56,8 @@
 
 }
 
+
+/*  Start ProfileStatus */
 .profileAboutMe {
     font-size: 14px;
     color: #000;
@@ -66,6 +68,9 @@
     font-weight: 400;
     margin: 10px auto 0 0;
 }
+
+/*  End ProfileStatus */
+
 
 .profileAboutButton {
     display: flex;
@@ -95,7 +100,6 @@
 .profileAboutButton:hover {
     cursor: pointer;
 }
-
 
 
 .profileButtons {
