--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -121,3 +121,49 @@
     background-color: #dfe6ed
 }
 
+
+
+
+.menuButton {
+    position: absolute;
+    top: 60px;
+    right: 75px;
+    width: 250px;
+    background-color: #fff;
+    border-radius: 10px;
+    padding: 20px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    z-index: 100;
+}
+
+.menuButton img {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    /*margin-right: 16px;*/
+}
+
+.menuButton li {
+    /*margin-bottom: 12px;*/
+    list-style-type: none;
+    padding: 12px;
+}
+
+.menuButton > li:hover {
+    background-color: #dfe6ed;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 99;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
