--- a/src/components/Login/Login.module.css
+++ b/src/components/Login/Login.module.css
@@ -97,3 +97,8 @@
     border-radius: 4px;
     cursor: pointer;
 }
+
+.submitBtn:disabled {
+    background-color: #ccc;
+    cursor: not-allowed;
+}
