--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -69,14 +69,14 @@
 }
 
 .headerLoginButtonBlock {
-    margin-left: 490px;
+    margin-left: 450px;
     display: flex;
 }
 
 
 .headerLoginButtonList {
     display: flex;
-    gap: 15px;
+    gap: 25px;
     justify-content: center;
     align-items: center;
     align-self: center;
@@ -105,7 +105,7 @@
 .loginButtonsItems a {
     padding: 5px 10px;
     border-radius: 10px;
-    background-color: #ebecee;
+    /*background-color: #ebecee;*/
     text-decoration: none;
     font-weight: 600;
     color: gray;
@@ -122,48 +122,31 @@
 }
 
 
+.navLinkBlock {
+    padding: 5px 10px;
 
-
-.menuButton {
-    position: absolute;
-    top: 60px;
-    right: 75px;
-    width: 250px;
-    background-color: #fff;
-    border-radius: 10px;
-    padding: 20px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-    z-index: 100;
 }
 
-.menuButton img {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    /*margin-right: 16px;*/
-}
-
-.menuButton li {
-    /*margin-bottom: 12px;*/
-    list-style-type: none;
-    padding: 12px;
-}
-
-.menuButton > li:hover {
+.navLinkBlock:hover {
     background-color: #dfe6ed;
-    border-radius: 5px;
-    cursor: pointer;
+    border-radius: 10px;
+
 }
 
-.overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    z-index: 99;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.headerLoginButtonMenu {
+    position: relative;
+    cursor: pointer;
+    padding: 5px 10px;
 }
+
+.headerLoginButtonMenu:hover {
+    background-color: #dfe6ed;
+    border-radius: 10px;
+}
+
+
+
+
+
+
+
