--- a/src/components/Profile/ProfileInfo/ProfileInfoComponents/ProfileBriefInfo/MoreDetailsInfoForm.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfoComponents/ProfileBriefInfo/MoreDetailsInfoForm.module.css
@@ -1,3 +1,107 @@
+.moreDetailBlock {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.5); /* Прозрачный цвет фона */
+    z-index: 999; /* Уровень над другими элементами */
+    cursor: default;
+}
+
+.moreDetailWrapper {
+    position: absolute;
+    padding: 20px;
+    background-color: #fff;
+    width: 900px;
+    border-radius: 10px;
+    height: 600px;
+    overflow: auto;
+}
+
+/* Добавляем border-radius к полосе прокрутки */
+.moreDetailWrapper::-webkit-scrollbar {
+    width: 12px; /* Ширина полосы прокрутки */
+    border-radius: 10px; /* Задаем border-radius */
+}
+
+/* Стили для фона полосы прокрутки */
+.moreDetailWrapper::-webkit-scrollbar-track {
+    background-color: #f1f1f1; /* Цвет фона полосы прокрутки */
+    border-radius: 10px; /* Задаем border-radius */
+}
+
+/* Стили для ползунка прокрутки */
+.moreDetailWrapper::-webkit-scrollbar-thumb {
+    background-color: #888; /* Цвет ползунка прокрутки */
+    border-radius: 10px; /* Задаем border-radius */
+}
+
+/* Изменяем цвет ползунка прокрутки при наведении */
+.moreDetailWrapper::-webkit-scrollbar-thumb:hover {
+    background-color: #555; /* Цвет ползунка прокрутки при наведении */
+}
+
+
+.closeButton {
+    position: absolute;
+}
+
+.closeIcon {
+    position: relative;
+    top: 10px;
+    left: 800px;
+}
+
+.closeIcon svg {
+    width: 40px;
+    height: 40px;
+    fill: #3b5998;
+}
+
+.closeIcon svg:hover {
+    fill: red;
+    cursor: pointer;
+}
+
+.photo img {
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    border: 1px solid #3b5998;
+}
+
+.photo svg {
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    border: 2px solid #7e93a0;
+    background-color: #ebecee;
+    fill: #fff;
+}
+
+
+
+
+.error {
+    color: red;
+    font-size: 14px;
+    margin-top: 4px;
+}
+
+
+
+
+
+
+
+.detailsMainListWrapper{
+    max-height: 200px;
+}
+
 .formData {
     display: flex;
     flex-direction: column;
@@ -32,9 +136,6 @@
     border-radius: 10px;
 }
 
-
-
-
 .radioContainer {
     display: flex;
     align-items: center;
@@ -63,9 +164,6 @@
     margin-right: 16px;
 }
 
-
-
-
 .editButton {
     margin: 20px auto;
     background-color: #e9f0f8;
@@ -80,4 +178,10 @@
 .editButton:hover {
     cursor: pointer;
     background-color: #7e93a0;
+}
+
+.errorText {
+    color: red;
+    font-size: 14px;
+    margin-top: 5px;
 }
